--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -28,7 +28,9 @@ body {
   width: 100%;
 }
 .wraper {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 355px;
   height: 90vh;
 }
