css a las cards

--- a/src/assets/css/Item.css
+++ b/src/assets/css/Item.css
@@ -4,13 +4,14 @@
     flex-direction: column;
     align-items: center;
     border: solid 1px #999;
-    width: 130px;
+    width: 150px;
     margin: 5px;
     border-radius: 20px;
     justify-content: space-between;
+    color: #000;
   }
   .home-item-img {
-    width: 70%;
+    height: 90px;
   }
   .home-item-actions {
     display: flex;
@@ -19,7 +20,9 @@
   
   .home-item-titulo {
     margin: 0px;
-    font-size: 20px;
+    font-size: 12px;
+    text-decoration: none;
+    margin-top: 10px;
   }
   .home-item-medidas {
     margin: 0px;
@@ -39,4 +42,11 @@
     border: 0px;
     border-radius: 10px;
     width: 40px;
+    cursor: pointer;
+  }
+  .home-item-info{
+    width: 85%;
+  }
+  .item-wrap-link{
+    text-decoration: none;
   }
