--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -18,13 +18,14 @@ body {
 .titulo {
   text-align: center;
   font-weight: 700;
-  margin-top: 0px;
+  margin-top: 20px;
 }
 .container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
   width: 100%;
 }
 .wraper {
@@ -33,6 +34,7 @@ body {
   align-items: center;
   width: 355px;
   height: 90vh;
+  overflow: scroll;
 }
 .home {
   display: flex;
