añadi el state cuenta para realizar la suma total del carrito

--- a/src/assets/css/CartItem.css
+++ b/src/assets/css/CartItem.css
@@ -28,6 +28,7 @@
   }
   .carrito-precio {
     width: 100%;
-    text-align: right;
+    font-size: 18px;
+    text-align: CENTER;
     margin-top: 15px;
   }
