--- a/src/assets/css/Cart.css
+++ b/src/assets/css/Cart.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    min-height: 80vh;
   }
   .carrito-listadito {
     width: 100%;
